--- a/pages/9687.html
+++ b/pages/9687.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -1312,7 +1312,7 @@ margin-left: 0em;
 <p>The relation to <a class="existingWikiWord" href="/nlab/show/QCD+instantons">QCD instantons</a>/<a class="existingWikiWord" href="/nlab/show/monopole">monopoles</a> in the <a class="existingWikiWord" href="/nlab/show/QCD+vacuum">QCD vacuum</a> is discussed in</p>
 
 <ul>
-<li id="SchaeferShuryak96">T. Schaefer, E. Shuryak, section III D of <em>Instantons in QCD</em>, Rev. Mod. Phys.70:323-426,1998 (<a href="http://arxiv.org/abs/hep-ph/9610451">arXiv:hep-ph/9610451</a>)</li>
+<li id="SchaeferShuryak96">T. Schaefer, <a class="existingWikiWord" href="/nlab/show/Edward+Shuryak">Edward Shuryak</a>, section III D of <em>Instantons in QCD</em>, Rev. Mod. Phys.70:323-426,1998 (<a href="http://arxiv.org/abs/hep-ph/9610451">arXiv:hep-ph/9610451</a>)</li>
 </ul>
 
 <p>and analogously (at <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">positive temperature</a>) relation to <em><a class="existingWikiWord" href="/nlab/show/calorons">calorons</a></em>:</p>
@@ -1324,6 +1324,14 @@ margin-left: 0em;
 
 <li>
 <p>P. Gerhold, E.-M. Ilgenfritz, M. Müller-Preussker, <em>An <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>SU</mi><mo stretchy="false">(</mo><mn>2</mn><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">SU(2)</annotation></semantics></math> KvBLL caloron gas model and confinement</em>, Nucl.Phys.B760:1-37, 2007 (<a href="https://arxiv.org/abs/hep-ph/0607315">arXiv:hep-ph/0607315</a>)</p>
+</li>
+
+<li id="LarsenShuryak14">
+<p>Rasmus Larsen, <a class="existingWikiWord" href="/nlab/show/Edward+Shuryak">Edward Shuryak</a>, <em>Classical interactions of the instanton-dyons with antidyons</em>, Nucl. Phys. A <strong>950</strong>, 110 (2016) (<a href="https://arxiv.org/abs/1408.6563">arXiv:1408.6563</a>)</p>
+</li>
+
+<li id="LarsenShuryak15">
+<p>Rasmus Larsen, <a class="existingWikiWord" href="/nlab/show/Edward+Shuryak">Edward Shuryak</a>, <em>Interacting Ensemble of the Instanton-dyons and Deconfinement Phase Transition in the SU(2) Gauge Theory</em>, Phys. Rev. D 92, 094022, 2015 (<a href="https://arxiv.org/abs/1504.03341">arXiv:1504.03341</a>)</p>
 </li>
 </ul>
 
@@ -1412,14 +1420,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 11:59:36.
+  Last revised on November 19, 2018 at 12:47:44.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
