--- a/pages/19945.html
+++ b/pages/19945.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9290/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9290/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -332,7 +332,7 @@ margin-left: 0em;
 <div class="num_theorem">
 <h6 id="theorem">Theorem</h6>
 
-<p>In an algebraically closed commutative semifield the equation</p>
+<p>In an algebraically closed commutative idempotent semifield the equation</p>
 <div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msub><mi>p</mi> <mn>0</mn></msub><mo>+</mo><msub><mi>p</mi> <mn>1</mn></msub><mo>⋅</mo><msup><mi>x</mi> <mn>1</mn></msup><mo>+</mo><msub><mi>p</mi> <mn>2</mn></msub><mo>⋅</mo><msup><mi>x</mi> <mn>2</mn></msup><mo>+</mo><mi>…</mi><mo>+</mo><msub><mi>p</mi> <mi>n</mi></msub><msup><mi>x</mi> <mi>n</mi></msup><mo>=</mo><mi>y</mi></mrow><annotation encoding="application/x-tex">
   p_0 + p_1 \cdot x^1 + p_2 \cdot x^2 + \ldots + p_n x^n = y
 
@@ -385,14 +385,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 19, 2018 at 08:24:41.
+  Last revised on November 20, 2018 at 09:39:30.
   See the <a href="https://ncatlab.org/nlab/history/idempotent semifield" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/idempotent+semifield" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/idempotent+semifield" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/idempotent+semifield/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/idempotent+semifield" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/idempotent+semifield" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/idempotent semifield/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
