--- a/pages/6346.html
+++ b/pages/6346.html
@@ -770,6 +770,7 @@ margin-left: 0em;
 <ul>
 <li><a href='#idea'>Idea</a></li>
 <li><a href='#related_concepts'>Related concepts</a></li>
+<li><a href='#references'>References</a></li>
 </ul>
 </div>
 
@@ -798,6 +799,16 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Ward+identity">Ward identity</a></p>
 </li>
 </ul>
+
+<h2 id="references">References</h2>
+
+<p>See most any text on <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a>/<a class="existingWikiWord" href="/nlab/show/statistical+mechanics">statistical mechanics</a>.</p>
+
+<p>Discussion specifically of <a class="existingWikiWord" href="/nlab/show/non-perturbative+effect">non-perturbative</a> <a class="existingWikiWord" href="/nlab/show/monopole">monopole</a> correlators:</p>
+
+<ul>
+<li id="Iqbal14"><a class="existingWikiWord" href="/nlab/show/Nabil+Iqbal">Nabil Iqbal</a>, <em>Monopole correlations in holographically flavored liquids</em>, Phys. Rev. D 91, 106001 (2015) (<a href="https://arxiv.org/abs/1409.5467">arXiv:1409.5467</a>)</li>
+</ul>
 <p><strong><a class="existingWikiWord" href="/nlab/show/holographic+principle">holographic principle</a> in <a class="existingWikiWord" href="/nlab/show/quantum+field+theory">quantum field theory</a></strong></p><table><thead><tr><th><a class="existingWikiWord" href="/nlab/show/bulk+field+theory">bulk field theory</a></th><th><a class="existingWikiWord" href="/nlab/show/boundary+field+theory">boundary field theory</a></th></tr></thead><tbody><tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_09f5a372cf29c6ceb81738a718c5b5bf0f4bac5c_1"><semantics><mrow><mi>n</mi><mo>+</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">n+1</annotation></semantics></math></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/dimension">dimension</a> <math xmlns="http://www.w3.org/1998/Math/MathML" class="maruku-mathml" display="inline" id="mathml_09f5a372cf29c6ceb81738a718c5b5bf0f4bac5c_2"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/field+%28physics%29">field</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/source+field">source</a></td></tr>
 <tr><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/wave+function">wave function</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/correlation+function">correlation function</a></td></tr>
@@ -808,14 +819,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 10, 2018 at 09:03:59.
+  Last revised on November 21, 2018 at 03:39:03.
   See the <a href="https://ncatlab.org/nlab/history/correlator" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/correlator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/correlator/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/correlator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/correlator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/correlator" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/correlator/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/correlator" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/correlator" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/correlator/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
