--- a/pages/6807.html
+++ b/pages/6807.html
@@ -567,6 +567,7 @@ margin-left: 0em;
 <li><a href='#ground_state_problem'>Ground state problem</a></li>
 <li><a href='#graviton_scattering'>Graviton scattering</a></li>
 <li><a href='#black_holes'>Black holes</a></li>
+<li><a href='#relation_to_lattice_gauge_theory'>Relation to lattice gauge theory</a></li>
 </ul>
 </ul>
 </div>
@@ -696,7 +697,13 @@ margin-left: 0em;
 <p>For a new attempt and pointers to previous attempts see</p>
 
 <ul>
-<li>L. Boulton, M.P. Garcia del Moral, A. Restuccia, <em>The ground state of the D=11 supermembrane and matrix models on compact regions</em>, Nuclear Physics B Volume 910, September 2016, Pages 665-684 (<a href="https://arxiv.org/abs/1504.04071">arXiv:1504.04071</a>)</li>
+<li>
+<p>L. Boulton, M.P. Garcia del Moral, A. Restuccia, <em>The ground state of the D=11 supermembrane and matrix models on compact regions</em>, Nuclear Physics B Volume 910, September 2016, Pages 665-684 (<a href="https://arxiv.org/abs/1504.04071">arXiv:1504.04071</a>)</p>
+</li>
+
+<li>
+<p>L. Boulton, M.P. Garcia del Moral, A. Restuccia, <em>Measure of the potential valleys of the supermembrane theory</em> (<a href="https://arxiv.org/abs/1811.05758">arXiv:1811.05758</a>)</p>
+</li>
 </ul>
 
 <h3 id="graviton_scattering">Graviton scattering</h3>
@@ -762,20 +769,28 @@ margin-left: 0em;
 <p>Yoshifumi Hyakutake, <em>Black Hole and Fuzzy Objects in BFSS Matrix Model</em> (<a href="https://arxiv.org/abs/1801.07869">arXiv:1801.07869</a>)</p>
 </li>
 </ul>
+
+<h3 id="relation_to_lattice_gauge_theory">Relation to lattice gauge theory</h3>
+
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/lattice+gauge+theory">lattice gauge theory</a>:</p>
+
+<ul>
+<li id="Hanada16">Masanori Hanada, <em>What lattice theorists can do for superstring/M-theory</em>, International Journal of Modern Physics AVol. 31, No. 22, 1643006 (2016) (<a href="https://arxiv.org/abs/1604.05421">arXiv:1604.05421</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 16, 2018 at 11:16:42.
+  Last revised on November 21, 2018 at 05:56:59.
   See the <a href="https://ncatlab.org/nlab/history/BFSS matrix model" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/16" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(16 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/BFSS+matrix+model" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/BFSS+matrix+model/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/BFSS+matrix+model" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/BFSS+matrix+model" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/BFSS matrix model/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
