--- a/pages/9961.html
+++ b/pages/9961.html
@@ -976,6 +976,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Relation to <a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a>/<a class="existingWikiWord" href="/nlab/show/M-theory">M-theory</a> (such as via <a class="existingWikiWord" href="/nlab/show/BFSS+matrix+model">BFSS matrix model</a>) in view <a class="existingWikiWord" href="/nlab/show/AdS-CFT+duality">AdS-CFT duality</a>:</p>
+
+<ul>
+<li id="Hanada16">Masanori Hanada, <em>What lattice theorists can do for superstring/M-theory</em>, International Journal of Modern Physics AVol. 31, No. 22, 1643006 (2016) (<a href="https://arxiv.org/abs/1604.05421">arXiv:1604.05421</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -1069,14 +1075,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 12, 2018 at 10:14:46.
+  Last revised on November 21, 2018 at 05:58:13.
   See the <a href="https://ncatlab.org/nlab/history/lattice gauge theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/lattice+gauge+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/lattice+gauge+theory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/lattice+gauge+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/lattice+gauge+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/lattice gauge theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
