--- a/pages/10356.html
+++ b/pages/10356.html
@@ -929,7 +929,7 @@ margin-left: 0em;
 <li><a href='#RRCharge'>RR-Charge</a></li>
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
-<li><a href='#references'>References</a></li>
+<li><a href='#References'>References</a></li>
 </ul>
 </div>
 
@@ -1107,7 +1107,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<h2 id="references">References</h2>
+<h2 id="References">References</h2>
 
 <p>The concept originates with</p>
 
@@ -1242,14 +1242,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 20, 2018 at 05:59:06.
+  Last revised on November 21, 2018 at 11:06:19.
   See the <a href="https://ncatlab.org/nlab/history/fractional D-brane" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/fractional+D-brane" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/fractional+D-brane/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/fractional+D-brane" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/fractional+D-brane" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/fractional D-brane/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
