--- a/pages/1861.html
+++ b/pages/1861.html
@@ -1064,6 +1064,10 @@ margin-left: 0em;
 </ul>
 <li><a href='#related_concepts'>Related concepts</a></li>
 <li><a href='#references'>References</a></li>
+<ul>
+<li><a href='#general'>General</a></li>
+<li><a href='#equivariant_cohomotopy'>Equivariant Cohomotopy</a></li>
+</ul>
 </ul>
 </div>
 
@@ -1182,6 +1186,8 @@ margin-left: 0em;
 </tbody></table>
 <h2 id="references">References</h2>
 
+<h3 id="general">General</h3>
+
 <p>Original articles include</p>
 
 <ul>
@@ -1216,18 +1222,6 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>and for the <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a>-case in</p>
-
-<ul>
-<li id="Cruickshank03">James Cruickshank, <em>Twisted homotopy theory and the geometric equivariant 1-stem</em>, Topology and its Applications Volume 129, Issue 3, 1 April 2003, Pages 251-271 (<a href="https://doi.org/10.1016/S0166-8641(02)00183-9">arXiv:10.1016/S0166-8641(02)00183-9</a>)</li>
-</ul>
-
-<p>Discussion of <a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a> physics in terms of <a class="existingWikiWord" href="/nlab/show/equivariant+rational+homotopy+theory">rational equivariant</a> cohomotopy is in</p>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/John+Huerta">John Huerta</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <em><a class="existingWikiWord" href="/schreiber/show/Equivariant+homotopy+and+super+M-branes">Real ADE-equivariant (co)homotopy and Super M-branes</a></em> (<a href="https://arxiv.org/abs/1805.05987">arXiv:1805.05987</a>)</li>
-</ul>
-
 <p>See also</p>
 
 <ul>
@@ -1239,20 +1233,40 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/eom">eom</a>, <em><a href="https://www.encyclopediaofmath.org/index.php/Cohomotopy_group">Cohomotopy group</a></em></p>
 </li>
 </ul>
+
+<h3 id="equivariant_cohomotopy">Equivariant Cohomotopy</h3>
+
+<p>Discussion of the <a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a>-version of cohomotopy (<span class="newWikiWord">equivariant cohomotopy<a href="/nlab/new/equivariant+cohomotopy">?</a></span>):</p>
+
+<ul>
+<li id="Cruickshank03">
+<p>James Cruickshank, <em>Twisted homotopy theory and the geometric equivariant 1-stem</em>, Topology and its Applications Volume 129, Issue 3, 1 April 2003, Pages 251-271 (<a href="https://doi.org/10.1016/S0166-8641(02)00183-9">arXiv:10.1016/S0166-8641(02)00183-9</a>)</p>
+</li>
+
+<li>
+<p>Daniel Grady, <em>Cobordisms of global quotient orbifolds and an equivariant Pontrjagin-Thom construction</em> (<a href="https://arxiv.org/abs/1811.08794">arXiv:1811.08794</a>)</p>
+</li>
+</ul>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/M-brane">M-brane</a> physics in terms of <a class="existingWikiWord" href="/nlab/show/equivariant+rational+homotopy+theory">rational equivariant</a> cohomotopy:</p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/John+Huerta">John Huerta</a>, <a class="existingWikiWord" href="/nlab/show/Hisham+Sati">Hisham Sati</a>, <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>, <em><a class="existingWikiWord" href="/schreiber/show/Equivariant+homotopy+and+super+M-branes">Real ADE-equivariant (co)homotopy and Super M-branes</a></em> (<a href="https://arxiv.org/abs/1805.05987">arXiv:1805.05987</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 21, 2018 at 06:48:57.
+  Last revised on November 22, 2018 at 00:58:02.
   See the <a href="https://ncatlab.org/nlab/history/cohomotopy" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohomotopy/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/cohomotopy" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/cohomotopy/20" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(20 revisions)</span> | <a href="/nlab/show/diff/cohomotopy" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/cohomotopy" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/cohomotopy/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
