--- a/pages/19951.html
+++ b/pages/19951.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Sandbox in nLab
+      flavours of cohomotopy -- table in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Sandbox
+      flavours of cohomotopy -- table
   </h1>
 
 
@@ -294,6 +294,8 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9298/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -308,35 +310,30 @@ margin-left: 0em;
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
-<body>
-<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>T</mi><mo>→</mo><mn>∞</mn></mrow><annotation encoding="application/x-tex">T \to \infty</annotation></semantics></math></p>
-<table><thead><tr><th></th><th><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></th><th><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/non-abelian+cohomology">non-abelian cohomology</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomotopy">equivariant cohomotopy</a></td></tr>
+<body><table><thead><tr><th></th><th><a class="existingWikiWord" href="/nlab/show/cohomology">cohomology</a></th><th><a class="existingWikiWord" href="/nlab/show/equivariant+cohomology">equivariant cohomology</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/non-abelian+cohomology">non-abelian cohomology</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/cohomotopy">cohomotopy</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+cohomotopy">equivariant cohomotopy</a></td></tr>
 <tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/generalized+%28Eilenberg-Steenrod%29+cohomology">stable cohomology</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/stable+cohomotopy">stable cohomotopy</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/equivariant+stable+cohomotopy">equivariant stable cohomotopy</a></td></tr>
-</tbody></table>
-<p><a class="existingWikiWord" href="/nlab/show/flavours+of+cohomotopy+--+table">flavours of cohomotopy – table</a></p>
-<table><thead><tr><th>Table</th><th>me</th></tr></thead><tbody><tr><td style="text-align: left;">hi <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>x</mi></mrow><annotation encoding="application/x-tex">x</annotation></semantics></math></td><td style="text-align: left;">you</td></tr>
 </tbody></table></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 22, 2018 at 01:40:51.
-  See the <a href="https://ncatlab.org/nlab/history/Sandbox" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on November 22, 2018 at 01:42:25.
+  See the <a href="https://ncatlab.org/nlab/history/flavours of cohomotopy -- table" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1721" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1721 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/Sandbox/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/flavours+of+cohomotopy+--+table" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/flavours of cohomotopy -- table/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/Sandbox" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/flavours+of+cohomotopy+--+table" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/Sandbox" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/flavours+of+cohomotopy+--+table" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Sandbox" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/flavours+of+cohomotopy+--+table" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
