--- a/pages/17072.html
+++ b/pages/17072.html
@@ -327,6 +327,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/Goodwillie+derivatives+of+the+identity+functor">Goodwillie derivatives of the identity functor</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/configuration+space+%28mathematics%29">configuration space (mathematics)</a></p>
 </li>
 
@@ -340,14 +344,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 27, 2018 at 13:23:15.
+  Last revised on November 23, 2018 at 04:49:26.
   See the <a href="https://ncatlab.org/nlab/history/Michael Ching" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Michael+Ching" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Michael+Ching/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Michael+Ching" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Michael+Ching" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Michael+Ching" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Michael+Ching/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Michael+Ching" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Michael+Ching" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Michael Ching/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
