--- a/pages/10135.html
+++ b/pages/10135.html
@@ -997,27 +997,25 @@ margin-left: 0em;
   \,,
 
 </annotation></semantics></math></div>
-<p>From these then one re-obtains cohomology by applying the <a class="existingWikiWord" href="/nlab/show/shape+modality">shape modality</a>/<a class="existingWikiWord" href="/nlab/show/shape+via+cohesive+path+%E2%88%9E-groupoid">cohesive path ∞-groupoid</a>.</p>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mi>Π</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msub><mo maxsize="1.2em" minsize="1.2em">]</mo> <mrow><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub></mtd> <mtd><mo>≃</mo><mi>Π</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msup><mo maxsize="1.2em" minsize="1.2em">]</mo> <mi>faith</mi></msup><mspace width="thinmathspace"></mspace><mo>,</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
+<p>From these then one re-obtains cohomology by applying the <a class="existingWikiWord" href="/nlab/show/shape+modality">shape modality</a>/<a class="existingWikiWord" href="/nlab/show/shape+via+cohesive+path+%E2%88%9E-groupoid">cohesive path ∞-groupoid</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ʃ</mi></mrow><annotation encoding="application/x-tex">&amp;#643;</annotation></semantics></math>.</p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mrow><mtable displaystyle="true" columnalign="right left right left right left right left right left" columnspacing="0em"><mtr><mtd><mi>ʃ</mi><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msub><mo maxsize="1.2em" minsize="1.2em">]</mo> <mrow><mo stretchy="false">/</mo><mstyle mathvariant="bold"><mi>B</mi></mstyle><mi>G</mi></mrow></msub></mtd> <mtd><mo>≃</mo><mi>ʃ</mi><mrow><mo>(</mo><mo maxsize="1.2em" minsize="1.2em">[</mo><mi>𝒳</mi><mo>,</mo><mi>𝒜</mi><msup><mo maxsize="1.2em" minsize="1.2em">]</mo> <mi>faith</mi></msup><mo>)</mo></mrow><mspace width="thinmathspace"></mspace><mo>,</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding="application/x-tex">
 \begin{aligned}
-  \Pi
+  &amp;#643;
   \big[
     \mathcal{X}, \mathcal{A}
-  \big]_{\mathbf{B}G}
+  \big]_{/\mathbf{B}G}
   &amp; \simeq
-  \Pi
-  \big[
-    \mathcal{X}, \mathcal{A}
-  \big]^{faith}
+  &amp;#643;
+  \left(
+    \big[
+      \mathcal{X}, \mathcal{A}
+    \big]^{faith}
+  \right)
   \,,
 \end{aligned}
 
 </annotation></semantics></math></div>
 <p>This perspective paves the way to the equivalent description in terms of systems of fixed point loci:</p>
-
-<blockquote>
-<p>some care needed here, to be expanded…</p>
-</blockquote>
 
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
 
@@ -1131,14 +1129,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 19, 2018 at 04:27:38.
+  Last revised on November 23, 2018 at 09:46:39.
   See the <a href="https://ncatlab.org/nlab/history/orbifold cohomology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/orbifold+cohomology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/orbifold+cohomology/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/orbifold+cohomology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/orbifold+cohomology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/orbifold cohomology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
