--- a/pages/7964.html
+++ b/pages/7964.html
@@ -450,6 +450,7 @@ margin-left: 0em;
 <li><a href='#properties'>Properties</a></li>
 <ul>
 <li><a href='#MassAndVacuumInstability'>Mass and vacuum (in-)stability</a></li>
+<li><a href='#CosmologicalInstability'>Cosmological instability?</a></li>
 <li><a href='#AsymtoticSafetyOrNot'>Asymptotic safety?</a></li>
 </ul>
 <li><a href='#models'>Models</a></li>
@@ -500,6 +501,10 @@ margin-left: 0em;
 <blockquote>
 <p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo></mrow><annotation encoding="application/x-tex">[</annotation></semantics></math>The<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">]</annotation></semantics></math> conclusion is that the best theoretical fit to measured parameters, including the Higgs and top-quark masses, points to a metastable Universe. However, their analysis also concludes that values of parameters are closer to a region of absolute stability than suggested by previous studies: it is possible for the Universe to be fully stable (and for the standard model to work all the way up to the Planck scale), if the true values of measured parameters are only 1.3 standard deviations away from the current best estimates.</p>
 </blockquote>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mspace width="thinmathspace"></mspace></mrow><annotation encoding="application/x-tex">\,</annotation></semantics></math></p>
+
+<h3 id="CosmologicalInstability">Cosmological instability?</h3>
 
 <p>However, it has been argued that an actual <a class="existingWikiWord" href="/nlab/show/false+vacuum">false vacuum</a> of the Higgs is incompatible with <a class="existingWikiWord" href="/nlab/show/cosmology">cosmology</a>, as due to <a class="existingWikiWord" href="/nlab/show/vacuum+fluctuations">vacuum fluctuations</a> during <a class="existingWikiWord" href="/nlab/show/inflation">inflation</a> the <a class="existingWikiWord" href="/nlab/show/vacuum+decay">vacuum decay</a> would not have been avoided (<a href="#EGR07">EGR 07</a>, <a href="#HKSZ14">HKSZ 14</a>, <a href="#EGMRSST15">EGMRSST 15</a>, <a href="#EKSYZ16">EKSYZ 16</a>). In (<a href="#BDGGSSS13">BDGGSSS 13, section 7</a>, <a href="#Kane18">Kane 18 , “Clue 4”</a>) it was argued that this suggests a further principle which prevents the vacuum instability and that a natural such principle is <a class="existingWikiWord" href="/nlab/show/supersymmetry">supersymmetry</a>. (This argument has a long history, see <a href="#Gibbs11b">Gibbs 11b</a>).</p>
 
@@ -764,14 +769,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 15, 2018 at 09:36:22.
+  Last revised on November 25, 2018 at 03:58:04.
   See the <a href="https://ncatlab.org/nlab/history/Higgs field" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Higgs+field" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Higgs+field/29" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(29 revisions)</span> | <a href="/nlab/show/diff/Higgs+field" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Higgs+field" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Higgs field/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
