--- a/pages/19958.html
+++ b/pages/19958.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9307/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -309,7 +309,7 @@ margin-left: 0em;
 
 <div id="revision">
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
-<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title>Remark</title></head>
+<head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
 <p>A <em>category of interest</em>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝕏</mi></mrow><annotation encoding="application/x-tex">\mathbb{X}</annotation></semantics></math>, is a <a class="existingWikiWord" href="/nlab/show/variety+of+algebras">variety</a> of <a class="existingWikiWord" href="/nlab/show/universal+algebras">universal algebras</a> whose theory contains</p>
 
@@ -335,11 +335,9 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ω</mi><mo>∈</mo><msubsup><mi>Ω</mi> <mn>1</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">\omega\in\Omega_1^\prime</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo><mo>∈</mo><msubsup><mi>Ω</mi> <mn>2</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">*\in  \Omega_2^\prime</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔼</mi></mrow><annotation encoding="application/x-tex">\mathbb{E}</annotation></semantics></math> includes the identities:</p>
+<p>for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ω</mi><mo>∈</mo><msubsup><mi>Ω</mi> <mn>1</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">\omega\in\Omega_1^\prime</annotation></semantics></math> and <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo><mo>∈</mo><msubsup><mi>Ω</mi> <mn>2</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">*\in  \Omega_2^\prime</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝔼</mi></mrow><annotation encoding="application/x-tex">\mathbb{E}</annotation></semantics></math> includes the identities:<math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo stretchy="false">)</mo><mo>=</mo><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>+</mo><mi>ω</mi><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\omega(x+y) = \omega(x)+\omega(y)</annotation></semantics></math> \quad and \quad <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>*</mo><mi>y</mi><mo>=</mo><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo>*</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\omega(x)*y=\omega(x*y)</annotation></semantics></math>$</p>
 </li>
-</ol>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo>+</mo><mi>y</mi><mo stretchy="false">)</mo><mo>=</mo><mi>ω</mi><mo stretchy="false">(</mo><mi>x</mi><mo stretchy="false">)</mo><mo>+</mo><mi>ω</mi><mo stretchy="false">(</mo><mi>y</mi><mo stretchy="false">)</mo></mrow><annotation encoding="application/x-tex">\omega(x+y) = \omega(x)+\omega(y)</annotation></semantics></math></div>
-<ol>
+
 <li>
 <p>for <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo><mo>∈</mo><msubsup><mi>Ω</mi> <mn>2</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">*\in  \Omega_2^\prime</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>x</mi> <mn>1</mn></msub><mo>+</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>*</mo><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>=</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>*</mo><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>+</mo><msub><mi>x</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">x_1 + (x_2*x_3) = (x_2*x_3)+x_1</annotation></semantics></math> for all <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>x</mi> <mn>1</mn></msub></mrow><annotation encoding="application/x-tex">x_1</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>x</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">x_2</annotation></semantics></math>, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>x</mi> <mn>3</mn></msub></mrow><annotation encoding="application/x-tex">x_3</annotation></semantics></math>;</p>
 </li>
@@ -348,26 +346,34 @@ margin-left: 0em;
 <p>for any <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>*</mo><mo>,</mo><mover><mo>*</mo><mo>¯</mo></mover><mo>∈</mo><msubsup><mi>Ω</mi> <mn>2</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">*, \overline{*} \in \Omega_2^\prime</annotation></semantics></math>, there is a word, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>W</mi></mrow><annotation encoding="application/x-tex">W</annotation></semantics></math> such that</p>
 </li>
 </ol>
-<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>*</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mover><mo>*</mo><mo>¯</mo></mover><msub><mi>x</mi> <mn>3</mn></msub><mo>=</mo><mi>W</mi><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>,</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>,</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>,</mo></mrow><annotation encoding="application/x-tex">(x_1*x_2)\overline{*}x_3 = W(x_1(x_2x_3), x_1(x_3x_2), (x_2x_3)x_1, (x_3x_2)x_1,x_2(x_1x_3),x_2(x_3x_1),(x_1x_3)x_2,x_3x_1)x_2),</annotation></semantics></math></div>
+
+<p><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>*</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mover><mo>*</mo><mo>¯</mo></mover><msub><mi>x</mi> <mn>3</mn></msub><mo>=</mo><mi>W</mi><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>,</mo><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>2</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>1</mn></msub><mo>,</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><mo>,</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><mo>,</mo><mo stretchy="false">(</mo><msub><mi>x</mi> <mn>1</mn></msub><msub><mi>x</mi> <mn>3</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>2</mn></msub><mo>,</mo><msub><mi>x</mi> <mn>3</mn></msub><msub><mi>x</mi> <mn>1</mn></msub><mo stretchy="false">)</mo><msub><mi>x</mi> <mn>2</mn></msub><mo stretchy="false">)</mo><mo>,</mo></mrow><annotation encoding="application/x-tex">(x_1*x_2)\overline{*}x_3 = W(x_1(x_2x_3), x_1(x_3x_2), (x_2x_3)x_1, (x_3x_2)x_1,x_2(x_1x_3),x_2(x_3x_1),(x_1x_3)x_2,x_3x_1)x_2),</annotation></semantics></math></p>
+
 <p>where each juxtaposition represents an operation in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msubsup><mi>Ω</mi> <mn>2</mn> <mstyle scriptlevel="0"><mo>′</mo></mstyle></msubsup></mrow><annotation encoding="application/x-tex">\Omega_2^\prime</annotation></semantics></math>.</p>
 
 <h2 id="remark">Remark</h2>
 
-<p>Any category of interest is a variety of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-groups (in the sense of Higgins) and so is automatically a <a class="existingWikiWord" href="/nlab/show/semi-abelian+category">semi-abelian category</a>.</p>
+<p>Any category of interest is a variety of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-groups (in the sense of Higgins) and so is automatically a [[semi-abelian category]].</p>
+
+<h2 id="references">References</h2>
+
+<ul>
+<li>Grace Orzech, <em>Obstruction theory in algebraic categories I, II</em>, J. Pure Appl. Algebra <strong>2</strong> (1972) 287-340, 315 - 340.</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Created on November 25, 2018 at 02:50:59.
+  Last revised on November 25, 2018 at 03:31:45.
   See the <a href="https://ncatlab.org/nlab/history/category of interest" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+interest" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/category+of+interest" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+interest/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/category+of+interest" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+interest" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/category of interest/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
