--- a/pages/5699.html
+++ b/pages/5699.html
@@ -311,6 +311,8 @@ margin-left: 0em;
     <html xmlns="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" xml:lang="en" lang="en">
 <head><meta http-equiv="Content-type" content="application/xhtml+xml;charset=utf-8" /><title></title></head>
 <body>
+<p>Cumrun Vafa is a <a class="existingWikiWord" href="/nlab/show/string+theory">string theorist</a> at Harvard.</p>
+
 <ul>
 <li>
 <p><a href="https://www.cumrunvafa.org/">personal webpage</a></p>
@@ -552,14 +554,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 03:08:11.
+  Last revised on November 26, 2018 at 04:04:36.
   See the <a href="https://ncatlab.org/nlab/history/Cumrun Vafa" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Cumrun Vafa/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
