--- a/pages/8508.html
+++ b/pages/8508.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4258/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4258/#Item_6" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -830,20 +830,36 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Charles+Doran">Charles Doran</a>, <a class="existingWikiWord" href="/nlab/show/Kevin+Iga">Kevin Iga</a>, Jordan Kostiuk, <a class="existingWikiWord" href="/nlab/show/Stefan+M%C3%A9ndez-Diez">Stefan Méndez-Diez</a>, <em>Geometrization of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi></mrow><annotation encoding="application/x-tex">\mathcal{N}</annotation></semantics></math>-Extended 1-Dimensional Supersymmetry Algebras II</em> (<a href="https://arxiv.org/abs/1610.09983">arXiv:1610.09983</a>)</p>
 </li>
 </ul>
+
+<p>See also</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Robert+Penner">Robert Penner</a>, <a class="existingWikiWord" href="/nlab/show/Anton+Zeitlin">Anton Zeitlin</a>, <em>Decorated Super-Teichmüller Space</em> (<a href="https://arxiv.org/abs/1509.06302">arXiv:1509.06302</a>)</p>
+</li>
+
+<li>
+<p>Ivan C.H. Ip, <a class="existingWikiWord" href="/nlab/show/Robert+Penner">Robert Penner</a>, <a class="existingWikiWord" href="/nlab/show/Anton+Zeitlin">Anton Zeitlin</a>, <em><math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> Super-Teichmüller Theory</em>, Advances in Mathematics 336 (2018) 409-454 (<a href="https://arxiv.org/abs/1605.08094">arXiv:1605.08094</a>)</p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Anton+Zeitlin">Anton Zeitlin</a>, <em>Super-Teichmüller spaces and related structures</em> (<a href="https://arxiv.org/abs/1811.09939">arXiv:1811.09939</a>)</p>
+</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 23, 2018 at 05:32:32.
+  Last revised on November 27, 2018 at 02:55:35.
   See the <a href="https://ncatlab.org/nlab/history/super Riemann surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+Riemann+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Riemann+surface/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/super+Riemann+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Riemann+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/super+Riemann+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Riemann+surface/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/super+Riemann+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Riemann+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/super Riemann surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
