--- a/pages/9687.html
+++ b/pages/9687.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_15" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_22" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -1069,6 +1069,7 @@ margin-left: 0em;
 <li><a href='#potential_solutions'>Potential solutions</a></li>
 <ul>
 <li><a href='#ViaCalorons'>Via Calorons</a></li>
+<li><a href='#via_adsqcd_correspondence'>Via AdS/QCD correspondence</a></li>
 <li><a href='#InN2SYM'>In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Witten theory</a></li>
 <li><a href='#ForN1SYMViaMTheoryOnG2Manifolds'>In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>1</mn></mrow><annotation encoding="application/x-tex">\mathcal{N} = 1</annotation></semantics></math> super Yang-Mills theory via M-theory on <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><msub><mi>G</mi> <mn>2</mn></msub></mrow><annotation encoding="application/x-tex">G_2</annotation></semantics></math>-manifolds</a></li>
 </ul>
@@ -1157,6 +1158,10 @@ margin-left: 0em;
 
 <p>The <a class="existingWikiWord" href="/nlab/show/caloron">caloron</a> idea is probably the most promising current version of <a class="existingWikiWord" href="/nlab/show/monopole">monopole</a> <a class="existingWikiWord" href="/nlab/show/confinement">confinement</a> in pure non-abelian gauge theories, but it is basically (in certain <a class="existingWikiWord" href="/nlab/show/gauge+fixing">gauges</a>) a superposition of <a class="existingWikiWord" href="/nlab/show/monopoles">monopoles</a> with spherically symmetric abelian fields, and this leads to the same questions raised in connection with monopole Coulomb gases.</p>
 </blockquote>
+
+<h3 id="via_adsqcd_correspondence">Via AdS/QCD correspondence</h3>
+
+<p>For the moment see at <em><a class="existingWikiWord" href="/nlab/show/AdS%2FQCD+correspondence">AdS/QCD correspondence</a></em>.</p>
 
 <h3 id="InN2SYM">In <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>𝒩</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding="application/x-tex">\mathcal{N}=2</annotation></semantics></math> super Yang-Mills theory via Seiberg-Witten theory</h3>
 
@@ -1420,14 +1425,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 25, 2018 at 04:13:49.
+  Last revised on November 27, 2018 at 02:11:49.
   See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
