--- a/pages/19937.html
+++ b/pages/19937.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/9276/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9276/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -534,6 +534,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/black+hole+entropy">black hole entropy</a>:</p>
+
+<ul>
+<li>Dao-Quan Sun, Ping Li, Xian-Ru Hu, Jian-Bo Deng, <em>Insight into the Microscopic Structure of an AdS Black Hole from the quantization</em> (<a href="https://arxiv.org/abs/1811.09952">arXiv:1811.09952</a>)</li>
+</ul>
+
 <p>See also</p>
 
 <ul>
@@ -545,14 +551,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Created on November 15, 2018 at 10:50:08.
+  Last revised on November 27, 2018 at 02:52:13.
   See the <a href="https://ncatlab.org/nlab/history/black hole in anti-de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+hole+in+anti-de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/black+hole+in+anti-de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole+in+anti-de+Sitter+spacetime/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/black+hole+in+anti-de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole+in+anti-de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/black hole in anti-de Sitter spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
