--- a/pages/6697.html
+++ b/pages/6697.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -641,6 +641,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/singleton+representation">singleton representation</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/AdS%2FCFT+correspondence">AdS/CFT correspondence</a>, <a class="existingWikiWord" href="/nlab/show/AdS%2FQCD+correspondence">AdS/QCD correspondence</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -714,14 +718,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 15, 2018 at 10:41:37.
+  Last revised on November 27, 2018 at 02:31:22.
   See the <a href="https://ncatlab.org/nlab/history/anti de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti+de+Sitter+spacetime/23" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(23 revisions)</span> | <a href="/nlab/show/diff/anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/anti+de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/anti+de+Sitter+spacetime/24" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(24 revisions)</span> | <a href="/nlab/show/diff/anti+de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/anti+de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/anti de Sitter spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
