--- a/pages/663.html
+++ b/pages/663.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/6466/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6466/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -696,7 +696,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>An equational <a class="existingWikiWord" href="/nlab/show/Horn+theory">Horn theory</a> is essentially algebraic, but not all essentially algebraic theories are equational Horn theories. Perhaps surprisingly, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cat</mi></mrow><annotation encoding="application/x-tex">Cat</annotation></semantics></math> is not the category of models of any equational Horn theory, nor is even the category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Pos</mi></mrow><annotation encoding="application/x-tex">Pos</annotation></semantics></math> of posets. See <a href="ftp://132.206.150.195/pub/barr/pdffiles/horn.pdf">this paper</a> by Barr for a proof. Essentially algebraic theories are equivalent to <em>partial</em> Horn theories.</p>
+<p>An equational <a class="existingWikiWord" href="/nlab/show/Horn+theory">Horn theory</a> is essentially algebraic, but not all essentially algebraic theories are equational Horn theories. Perhaps surprisingly, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Cat</mi></mrow><annotation encoding="application/x-tex">Cat</annotation></semantics></math> is not the category of models of any equational Horn theory, nor is even the category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Pos</mi></mrow><annotation encoding="application/x-tex">Pos</annotation></semantics></math> of posets. See <a href="ftp://132.206.150.195/pub/barr/pdffiles/horn.pdf">this paper</a> by Barr for a proof. Essentially algebraic theories are equivalent to <em>partial</em> Horn theories (<a href="#PalmgrenVickers">Palmgren, Vickers</a>).</p>
+</li>
+
+<li>
+<p>An equivalent formulation is as a <em>cartesian theory</em>, a <a class="existingWikiWord" href="/nlab/show/geometric+theory">geometric theory</a> in which disjunction <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo lspace="thinmathspace" rspace="thinmathspace">⋁</mo></mrow><annotation encoding="application/x-tex">\bigvee</annotation></semantics></math> is not used, and each use of existential quantification <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo>∃</mo></mrow><annotation encoding="application/x-tex">\exists</annotation></semantics></math> must be accompanied by a proof that existence is unique. See <a class="existingWikiWord" href="/nlab/show/Elephant">Elephant</a>.</p>
 </li>
 </ul>
 
@@ -715,6 +719,10 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/algebraic+%28%E2%88%9E%2C1%29-theory">algebraic (∞,1)-theory</a> / <a class="existingWikiWord" href="/nlab/show/essentially+algebraic+%28%E2%88%9E%2C1%29-theory">essentially algebraic (∞,1)-theory</a></p>
 </li>
 </ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cartesian+logic">cartesian logic</a></p>
 </li>
 
 <li>
@@ -751,7 +759,7 @@ margin-left: 0em;
 <p>A nice equivalent formulation can be found in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/Erik+Palmgren">Erik Palmgren</a>, <a class="existingWikiWord" href="/nlab/show/Steve+Vickers">Steve Vickers</a> Partial Horn logic and cartesian categories. Annals of Pure and Applied Logic, 145(2007), 314-355. (<a href="http://www2.math.uu.se/~palmgren/partialalgebras_pre.pdf">pdf</a>)</li>
+<li id="PalmgrenVickers"><a class="existingWikiWord" href="/nlab/show/Erik+Palmgren">Erik Palmgren</a>, <a class="existingWikiWord" href="/nlab/show/Steve+Vickers">Steve Vickers</a> Partial Horn logic and cartesian categories. Annals of Pure and Applied Logic, 145(2007), 314-355. (<a href="http://www2.math.uu.se/~palmgren/partialalgebras_pre.pdf">pdf</a>)</li>
 </ul>
 </body></html>
 
@@ -759,14 +767,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on October 12, 2018 at 06:56:52.
+  Last revised on November 27, 2018 at 08:27:26.
   See the <a href="https://ncatlab.org/nlab/history/essentially algebraic theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/essentially+algebraic+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/essentially+algebraic+theory/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/essentially+algebraic+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/essentially+algebraic+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/essentially+algebraic+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/essentially+algebraic+theory/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/essentially+algebraic+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/essentially+algebraic+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/essentially algebraic theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
